# Fraction

./: CMakeLists.txt
.cache/clangd/index/: main.cpp.E9B4E0FE6592E6D4.idx
src/: main.cpp
